2011-08-26  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: Debugger.setBreakpointByUrl should return error when setting breakpoint on the same location twice.
        https://bugs.webkit.org/show_bug.cgi?id=67030

        Reviewed by Pavel Feldman.

        * inspector/debugger/set-breakpoint-expected.txt: Renamed from LayoutTests/inspector/debugger/debugger-pause-on-breakpoint-expected.txt.
        * inspector/debugger/set-breakpoint.html: Renamed from LayoutTests/inspector/debugger/debugger-pause-on-breakpoint.html.

2011-08-29  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, fix event-constructors.html test.
        https://bugs.webkit.org/show_bug.cgi?id=63878

        * fast/events/constructors/event-constructors.html:

2011-08-29  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, mark event-constructors.html as failing in chromium.
        https://bugs.webkit.org/show_bug.cgi?id=66756

        * platform/chromium/test_expectations.txt:

2011-08-29  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, adding custom expectation for dom-constructors test in chromium
        until bug 66756 is resolved.
        https://bugs.webkit.org/show_bug.cgi?id=66756

        * platform/chromium/fast/dom/dom-constructors-expected.txt: Added.

2011-08-29  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, mark scrollbars/scrollbar-buttons.html as crashing in chromium.

        * platform/chromium/test_expectations.txt:

2011-08-28  Keishi Hattori  <keishi@webkit.org>

        Chromium Win: Setting square-button appearance reaches NOTREACHED
        https://bugs.webkit.org/show_bug.cgi?id=66918

        Reviewed by Kent Tamura.

        * fast/css/square-button-appearance-expected.txt: Added.
        * fast/css/square-button-appearance.html: Added. Test rendering of square-button appearance.
        * platform/chromium-linux/fast/css/square-button-appearance-expected.png: Added.