@@ -81,8 +81,7 @@ function test()
         function testFormattedConvertLocation(next)
         {
             var script = new WebInspector.Script("1", "foo.js", 0, 0, 20, 80, undefined, undefined, false);
-            var sourceFile = new WebInspector.RawSourceCode("id", script, mockScriptFormatter);
-            sourceFile.setFormatted(true);
+            var sourceFile = new WebInspector.RawSourceCode("id", script, mockScriptFormatter, true);
 
             function didCreateSourceMapping()
             {
@@ -97,8 +96,7 @@ function test()
         {
             var script1 = new WebInspector.Script("1", "foo.js", 10, 20, 30, 40, undefined, undefined, false);
             var script2 = new WebInspector.Script("2", "foo.js", 50, 60, 70, 80, undefined, undefined, false);
-            var sourceFile = new WebInspector.RawSourceCode("id", script1, mockScriptFormatter);
-            sourceFile.setFormatted(true);
+            var sourceFile = new WebInspector.RawSourceCode("id", script1, mockScriptFormatter, true);
             sourceFile.addScript(script2);
 
             function didCreateSourceMapping()
